--- a/.pipelines/COVID19Articles-ci.yml
+++ b/.pipelines/COVID19Articles-ci.yml
@@ -45,6 +45,20 @@ stages:
           python -m COVID19Articles.ml_service.pipelines.COVID19Articles_build_train_pipeline
       displayName: 'Publish Azure Machine Learning Pipeline'
 
+  - job: "Validate_Code_Quality"
+    dependsOn: "Model_CI_Pipeline"
+    displayName: "Validate code quality"
+    timeoutInMinutes: 15
+    pool: server
+    steps:
+    - task: ManualValidation@0
+    timeoutInMinutes: 10
+    inputs:
+        notifyUsers: |
+         odl_user_557244@msazurelabs.onmicrosoft.com
+        instructions: 'Please validate the code quality analysis results and resume.'
+        onTimeout: reject
+
 - stage: 'Trigger_AML_Pipeline'
   displayName: 'Train and evaluate model'
   condition: succeeded()
