Update COVID19Articles-ci.yml for Azure Pipelines

--- a/.pipelines/COVID19Articles-ci.yml
+++ b/.pipelines/COVID19Articles-ci.yml
@@ -51,11 +51,11 @@ stages:
     timeoutInMinutes: 15
     pool: server
     steps:
-    - task: ManualValidation@0
-    timeoutInMinutes: 10
-    inputs:
+     - task: ManualValidation@0
+       timeoutInMinutes: 10
+       inputs:
         notifyUsers: |
-         odl_user_XXXXXX@msazurelabs.onmicrosoft.com
+          odl_user_557244@msazurelabs.onmicrosoft.com
         instructions: 'Please validate the code quality analysis results and resume.'
         onTimeout: reject
 
